app-management-api-gateway/spring-cloud-config-geteway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name:  spring-cloud-config-getaway
spec:
  replicas: 1
  selector:
    matchLabels:
      namespace: dev
      app:  spring-cloud-config-getaway
  template:
    metadata:
      labels:
         namespace: dev
         app:  spring-cloud-config-getaway
    spec:
      containers:
      - name:  spring-cloud-config-getaway
        imagePullPolicy: Always
        image: registry.cn-beijing.aliyuncs.com/application-spring-cloud/ spring-cloud-config-getaway:v2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name:  spring-cloud-config-getaway
  namespace: dev
spec:
  ports:
   - port: 80
     protocol: TCP
     targetPort: 80
  selector:
    namespace: dev
    app:  spring-cloud-config-getaway
